--- a/config/base.toml
+++ b/config/base.toml
@@ -12,3 +12,25 @@ debug = true       #Запускать иммитатор
 host = "127.0.0.1"
 port = 1666
 listen = 1667
+
+[trafficdata]
+work = true
+debug = true       #Запускать иммитатор
+host = "127.0.0.1"
+port = 1666
+listen = 1667
+chanels = 16
+diaps = 1
+diap = 0
+
+[modbusradar]
+radar = false #если истинно нужно открывать прием сигналов радара
+master = true
+debug = true
+# host = "178.176.55.215"
+host = "127.0.0.1"
+port = 15001
+id = 11
+chanels = 16
+diaps = 1
+diap = 0
